--- a/src/styles/layout/_wrapper.scss
+++ b/src/styles/layout/_wrapper.scss
@@ -2,6 +2,7 @@
   @include topPadding(80px);
   width: 100vw;
   display: flex;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
 
