generator qr code + scan qr code + validation scan

--- a/src/styles/components/_img.scss
+++ b/src/styles/components/_img.scss
@@ -1,9 +1,7 @@
 /* stylise imgs */
 .img{
-  @media (min-width: $tabletBP){
-  }
-  
-  @media (min-width: $deskBP){
-  }
-
+  display: block;
+  width : 500px;
+  height : 300px;
+  object-fit: cover;
 }
